# NYCU-ICG

./: .gitignore  README.md
ICG_2025_HW1/: CMakeLists.txt
ICG_2025_HW1/src/: CMakeLists.txt  main.cpp
ICG_2025_HW1/src/header/: Object.h  Shader.h
ICG_2025_HW1/src/shaders/: easy.frag  easy.vert
ICG_2025_HW2/: CMakeLists.txt  report.docx
ICG_2025_HW2/src/: CMakeLists.txt  main.cpp  main_bug.cpp  sample_main.cpp
ICG_2025_HW2/src/header/: Object.h
ICG_2025_HW2/src/shaders/: fragmentShader.frag  vertexShader.vert
ICG_2025_HW3/src/: main.cpp  shader.cpp
ICG_2025_HW3/src/shaders/: cubemap.frag  glass_schlick.frag  metallic.frag
ICG_2025_HW4/: README.md
ICG_2025_HW4/src/: main.cpp  shader.cpp
ICG_2025_HW4/src/shaders/: Toon.frag  Toon.vert  bling-phong.frag  cubemap.vert  default.geom  default.vert  explode.geom  explode.vert  frog.frag  frog.vert  glass_schlick.vert  gouraud.frag  gouraud.vert  metallic.vert  meteor.frag  meteor.geom  meteor.vert  portal.frag  portal.vert  snowflake.frag  snowflake.geom  snowflake.vert
